--- a/index.html
+++ b/index.html
@@ -180,9 +180,14 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">My name is Wira Hadi Saputra.i'm a data analyst focused on data analysis and visualization to help businesses understand their trends, opportunities, and challenges.
-                                    My goal is simple :
-                                    transforming data into smarter, more impactful decision.
+                                <p class="lead fw-light mb-4">My name is Wira Hadi Saputra,
+                                    As a solution initiator with a highly structured Mindset, a result of intensive Mathematics
+                                     education, I am a fast learner accustomed to facing challenges that demand logic, precision, and
+                                      debugging skills in various analytical contexts, I have honed my skills in Analyzing data in Excel
+                                       managing databases with SQL, developing analytical models in Python, and presenting the
+                                      results visually through Tableau, With these abilities, I am committed to bridging mathematical
+                                    theory with the practice of data-driven decision making—not just crunching numbers, but
+                                  translating data into concrete and strategic business insights.
                                 </p>
                                 <p class="text-muted">These are my sosial media accounts - an easy way to get know me better.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
