--- a/projects.html
+++ b/projects.html
@@ -58,27 +58,27 @@
                                     <div>
                         <h5 style="text-align: center;">Answer for case no. 1</h5>
                         </div>
+                         <img class="img-fluid" src="assets/AT1.png" alt="..." /> 
                                     <h5> Insight     :</h5>
                                            <p>Interest in investing in the equity market (stocks) peaks at a young age (25-30 years old), then begins to decline with age, shifting to more stable investments (fixed deposits/gold). Young women also tend to show lower interest in high-risk instruments (equity markets) compared to young men.</p>
                                      <h5>Suggestion   :</h5>
                                             <p>Launch a hybrid product offering moderate-to-low risk to attract the 35-45 age group who are starting to leave equities. Also, hold webinars or financial training specifically designed to address risk aversion in young female investors, encouraging long-term investing.</p>     
-                                    <img class="img-fluid" src="assets/AT1.png" alt="..." /> 
                                      <div>
                         <h5 style="text-align: center;">Answer for case no. 2</h5>
                         </div>
+                        <img class="img-fluid" src="assets/AT2.png" alt="..." />
                                     <h5> Insight     :</h5>
                                            <p>Investors who state that their main goal is Capital Appreciation (capital increase) still allocate a large percentage to Liquidity instruments or Fixed Deposits which have lower returns.</p>
                                      <h5>Suggestion   :</h5>
                                             <p>Ensure that marketing materials for Equity and Mutual Funds products clearly target the segment seeking Capital Appreciation and explicitly indicate that Deposits are not the primary instrument for that purpose.</p>     
-                                    <img class="img-fluid" src="assets/AT2.png" alt="..." /> 
                                      <div>
                         <h5 style="text-align: center;">Answer for case no. 3</h5>
                         </div>
+                         <img class="img-fluid" src="assets/AT3.png" alt="..." /> 
                                     <h5> Insight     :</h5>
                                            <p>In the 30-35 age group, the average ownership of Mutual Funds among Men is much higher than that of Women.</p>
                                      <h5>Suggestion   :</h5>
                                             <p>Develop Mutual Funds products or investment platforms with more intuitive interfaces and narratives that appeal to female investors, thereby reducing the barrier to entry.</p>     
-                                    <img class="img-fluid" src="assets/AT3.png" alt="..." /> 
                                         </div>
                             </div>
                         </div>
@@ -100,39 +100,36 @@
                                   <div>
                         <h5 style="text-align: center;">Answer for case no. 1</h5>
                         </div>
+                         <img class="img-fluid" src="assets/1.png" alt="..." /> 
                                     <h5> Insight     :</h5>
                                            <p>It can be seen that the Age Histogram shows a high concentration of staff at a young age (around 25-35 years old) and a high concentration again at a more mature age (around 45 years old and above). There is a gap or decrease in the number of staff between the two groups (around 35-45 years old). Next, the Department Distribution Bar Chart shows that some departments have a clear Gender dominance. (For example, a certain Dept ID is dominated by blue bars/males, and another Dept ID is dominated by orange bars/females). and finally the Pie Chart shows that the majority of staff are on WFH status (53.00%), followed by Office (21.00%) and Hybrid (18.00%).</p>
                                      <h5>Suggestion   :</h5>
                                             <p>Target recruitment to experienced professionals in the 35-45 age range to fill the middle leadership gap (based on Insight 1), which is crucial for structural stability. Next, conduct an audit to understand the reasons for extreme gender dominance in certain departments, then launch a targeted recruitment program to improve gender underrepresentation in those departments (based on Insight 2). Finally, with the majority of staff in WFH status, invest in remote collaboration tools and engagement programs specifically for WFH/Hybrid to ensure productivity and a sense of belonging remain high.</p>     
-                                    <img class="img-fluid" src="assets/1.png" alt="..." /> 
-                                     <div>
                                         <div>
                         <h5 style="text-align: center;">Answer for case no. 2</h5>
                         </div>
+                        <img class="img-fluid" src="assets/2.png" alt="..." /> 
                                     <h5> Insight     :</h5>
                                            <p>The median salary for men (the line in the middle of the blue box) appears higher than the median salary for women (the line in the middle of the orange box). Furthermore, the overall IQR for men appears slightly above the IQR for women, indicating a general unadjusted pay gap in your organization.
 The Women's Trend Line (red/orange) is consistently below the Men's Trend Line (blue) across almost all experience levels (Years Exp). This gap widens at higher experience levels (8 years and above). This is strong evidence of a structural pay gap (adjusted pay gap). This means that women are paid less than men, even after accounting for objective factors (work experience), indicating a pay equity issue.</p>
                                      <h5>Suggestion   :</h5>
                                             <p>Conduct an In-depth Compensation Audit across the organization, especially in departments that have large differences in Years Exp but have significantly different Salary USD between genders. Focus on Identifying Female employees (orange circles) who are below the Male Trendline at the same experience level. Also, Allocate a dedicated budget to close the pay gap by adjusting the salaries of Female employees who are shown to be underpaid based on the Audit results (Trendline). Prioritize adjustments for Female employees with high experience (above 8 years), where the gap appears to be widest, to reduce the risk of turnover of senior talent. Next, Review the salary matrix and salary increase policies to ensure that Gender factors do not become predictors of future salaries. Train hiring and promotion managers to use objective and transparent compensation metrics.</p>     
-                                    <img class="img-fluid" src="assets/2.png" alt="..." /> 
-                                     <div>
                                         <div>
                         <h5 style="text-align: center;">Answer for case no. 3</h5>
                         </div>
+                        <img class="img-fluid" src="assets/3.png" alt="..." /> 
                                     <h5> Insight     :</h5>
                                            <p>There is a significant difference between the lowest and highest average department experience. Departments with the highest Avg. Years Exp (the highest bar) are at risk of career stagnation and an urgent need for promotion or rotation structures. The Work Status Analysis shows that staff with certain Work Statuses (e.g., Hybrid or Office, if they represent contract/non-permanent) have a higher average experience than WFH staff. If the bar for Contract or Part-Time is longer than Full-Time, this means your most senior talent lacks job security, creating a high risk of turnover.</p>
                                      <h5>Suggestion   :</h5>
                                             <p>Implement a job rotation program or urgent promotions in departments with the highest average Years Exp to prevent stagnation and maintain motivation. Review experienced staff who have non-permanent work status (Contract/Part-Time) and provide a clear path for conversion to Full-Time status if they are top performers, to ensure retention of valuable knowledge.</p>     
-                                    <img class="img-fluid" src="assets/3.png" alt="..." /> 
-                                     <div>
                                         <div>
                         <h5 style="text-align: center;">Answer for case no. 4</h5>
                         </div>
+                        <img class="img-fluid" src="assets/4.png" alt="..." /> 
                                     <h5> Insight     :</h5>
                                            <p>Departments with Below Average Salaries (left) but Above Average Experience (top). This is the "High Value, High Risk" zone. Employees in these departments are valuable assets (experienced) but have a high potential for turnover (changing jobs) because they feel undervalued financially. Meanwhile, Departments with Above Average Salaries (right) and Below Average Experience (bottom). This is the "New Talent, Well Paid" zone. The turnover risk is low.</p>
                                      <h5>Suggestion   :</h5>
-                                            <p>Manajemen harus memfokuskan penyesuaian gaji dan insentif retensi segera pada departemen yang titiknya jatuh di Kuadran Kiri Atas untuk mencegah kehilangan bakat senior secara massal. dan Departemen di Kuadran Kiri Bawah (Gaji Rendah, EXP Rendah) mungkin perlu program onboarding dan training yang lebih baik, tetapi risiko turnover yang ditimbulkan ke organisasi masih lebih rendah daripada Kuadran Kiri Atas.</p>     
-                                    <img class="img-fluid" src="assets/4.png" alt="..." /> 
+                                            <p>Management should focus immediate salary adjustments and retention incentives on departments falling in the Upper Left Quadrant to prevent mass loss of senior talent. Departments in the Lower Left Quadrant (Low Salary, Low EXP) may require better orientation and training programs, but the turnover risk they pose to the organization is still lower than those in the Upper Left Quadrant.</p>     
                                      <div>
                                      </div>  
                                 </div>
